--- a/book.html
+++ b/book.html
@@ -15,11 +15,11 @@
 <body>
 
     <div id="main" class="container">
-        
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
+    <!-- <script src="https://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:9780593440872&callback=handleGBResponse" type="text/javascript"></script> -->
     <!-- Compiled and minified JavaScript -->
     <script src="./assets/js/vendor/jquery.js"></script>
     <script src="./assets/js/vendor/what-input.js"></script>
