--- a/book.html
+++ b/book.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/foundation.css">
     <link rel="stylesheet" href="./assets/css/app.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
     <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
     <title>Book Details</title>
 </head>
