--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/foundation.css">
-    <link rel="stylesheet" href="./assets/css/app.css">
+    <!-- <link rel="stylesheet" href="./assets/css/foundation.css">
+    <link rel="stylesheet" href="./assets/css/app.css"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
     <title>Book Reviews</title>
@@ -14,39 +15,60 @@
 
 <body>
 
-    <div class="grid-container">
-        <div class="grid-x grid-margin-x">
-            <div class="large-12 cell">
-                <h1>New York Times Bestseller Lists</h1>
-            </div>
-        </div>
-        <div class="grid-x grid-margin-x">
-            <div class="small-12 large-3 cell">
-                <div class="callout">
-                    <label>Date:</label>
-                    <input type="date" id="date" placeholder="mm/dd/yyyy" />
-                    <label>Select List:
-                        <select id="listEl"></select>
-                    </label>
-                    <a href="#" id="searchButton" class="button">Search</a>
-                </div>
-            </div>
-            <div class="small-12 large-9 cell">
-                <div class="grid-container">
-                    <div id="books" class="grid-x grid-margin-x">
-
-                    </div>
-                </div>
-            </div>
+    <div class="flex flex-col">
+        <div class="basis-full head">
+            <h1 class="text-2xl font-black">New York Times Bestseller Lists</h1>
         </div>
     </div>
+
+    <div class="flex ml-2">
+        <form class="bg-gray-600 rounded-lg flex-auto">
+            <div class="mb-6 p-2">
+                <label for="date"
+                    class="block ml-2 mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Date:</label>
+                <input type="date" id="date"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+            </div>
+            <div class="mb-6 p-2">
+                <label for="listEl"
+                    class="block ml-2 mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Bestseller List:</label>
+                <select id="listEl"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"></select>
+            </div>
+            <button type="submit" id="searchButton"
+                class="m-2 float-right text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+        </form>
+        <div class="flex-auto">
+            <div id="books" class="flex">
+
+            </div>
+        </div>
+        </div>
+
+    <!--        <div class="basis-3/12">
+            <div class="w-96">
+                <label class="w-24">Date:</label>
+                <input type="date" id="date" class="w-48" placeholder="mm/dd/yyyy" /><br />
+                <label>Select List:</label>
+                <select id="listEl" class="bg-gray-200 w-48"></select><br />
+                <button id="searchButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 rounded">Search</button>
+            </div>
+        </div>
+        <div class="basis-8/12">
+            <div class="container mx-auto">
+                <div id="books" class="">
+
+                </div>
+            </div>
+        </div> -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
-    <script src="./assets/js/vendor/jquery.js"></script>
+    <!-- <script src="./assets/js/vendor/jquery.js"></script>
     <script src="./assets/js/vendor/what-input.js"></script>
     <script src="./assets/js/vendor/foundation.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/app.js"></script> -->
     <script src="./assets/js/script.js"></script>
 </body>
 
