--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
     </div>
 
-    <div class="flex ml-2">
-        <form class="bg-gray-600 rounded-lg flex-auto">
+    <div class="grid lg:grid-cols-6 md:grid-cols-4 sm:grid-cols-1 ml-2">
+        <form class="bg-gray-600 rounded-lg">
             <div class="mb-6 p-2">
                 <label for="date"
                     class="block ml-2 mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Date:</label>
@@ -38,37 +38,13 @@
             <button type="submit" id="searchButton"
                 class="m-2 float-right text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
         </form>
-        <div class="flex-auto">
-            <div id="books" class="flex">
-
-            </div>
+        <div id="books" class="grid grid-flow-row-dense lg:col-span-5 md:col-span-3 sm:col-span-1 lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-1 h-48 books">
         </div>
         </div>
 
-    <!--        <div class="basis-3/12">
-            <div class="w-96">
-                <label class="w-24">Date:</label>
-                <input type="date" id="date" class="w-48" placeholder="mm/dd/yyyy" /><br />
-                <label>Select List:</label>
-                <select id="listEl" class="bg-gray-200 w-48"></select><br />
-                <button id="searchButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 rounded">Search</button>
-            </div>
-        </div>
-        <div class="basis-8/12">
-            <div class="container mx-auto">
-                <div id="books" class="">
 
-                </div>
-            </div>
-        </div> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
-    <!-- Compiled and minified JavaScript -->
-    <!-- <script src="./assets/js/vendor/jquery.js"></script>
-    <script src="./assets/js/vendor/what-input.js"></script>
-    <script src="./assets/js/vendor/foundation.js"></script>
-    <script src="./assets/js/app.js"></script> -->
     <script src="./assets/js/script.js"></script>
 </body>
 
