--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Book Reviews</title>
 </head>
 
-<body>
+<body class="bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200">
 
     <div class="flex flex-col">
         <div class="basis-full head">
