--- a/book.html
+++ b/book.html
@@ -14,26 +14,25 @@
 
 <body class="bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200">
 
-    <div id="test" class="container mx-auto w-96">
-        <h1 class="text-center text-2xl">The Book Title</h1>
-        <div class="text-center text-lg">The Subtitle</div>
+    <div id="main" class="container mx-auto w-96">
+        <h1 id="title" class="text-center text-2xl">Loading...</h1>
+        <div id="subtitle" class="text-center text-lg"></div>
         <div class="container mx-auto">
-            <div class="float-left text-sm text-slate-700 dark:text-slate-400">Pages: 464</div>
-            <div class="float-right text-sm text-slate-700 dark:text-slate-400">Author</div>
+            <div id="pages" class="float-left text-sm text-slate-700 dark:text-slate-400"></div>
+            <div id="author" class="float-right text-sm text-slate-700 dark:text-slate-400"></div>
         </div>
-        <div class="text-basis clear-both">
-            <div class="float-right p-2"><img src="http://books.google.com/books/content?id=T7iJDQAAQBAJ&printsec=frontcover&img=1&zoom=5&edge=curl&source=gbs_api" /></div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus eum aut eligendi
-            cupiditate, eaque magnam fugiat, culpa tenetur voluptatem maxime distinctio at natus, ea nulla dolorem
-            excepturi praesentium nam harum.</div>
+        <div id="description" class="text-basis clear-both"></div>
+        <div id="buyLinks" class="float-left mt-3">
+            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4">Amazon</a>
+        </div>
+        <div id="borrowLinks" class="float-right mt-3">
+            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4">New York Public Library</a>
+        </div>
     </div>
 
-    <div id="main" class="container">
-
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <!-- <script src="./assets/js/book.js"></script> -->
+    <script src="./assets/js/book.js"></script>
 
 </body>
 
