Text Content Edits

--- a/homepage/hompage.html
+++ b/homepage/hompage.html
@@ -26,17 +26,17 @@
                  <div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
 
                     <li>
-                        <button class="button-73" role="button"><input type=button onClick="parent.open('')"value='HOME'></input></button>
+                        <button class="button" role="button"><input type=button onClick="parent.open('')"value='HOME'></input></button>
                     </li>
 
 
                     <li>
-                        <button class="button-73" role="button"><input type=button onClick="parent.open('')"value='BOOKS'></input></button>
+                        <button class="button" role="button"><input type=button onClick="parent.open('')"value='BOOKS'></input></button>
                     </li>
 
 
                     <li>
-                        <button class="button-73" role="button"><input type=button onClick="parent.open('')"value='TEAM'></input></button>
+                        <button class="button" role="button"><input type=button onClick="parent.open('')"value='TEAM'></input></button>
                     </li>
 
                </div>
