--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="flex flex-col">
         <div class="basis-full head">
-            <h1 class="text-2xl ml-2 font-black">New York Times Bestseller Lists</h1>
+            <h1 class="text-2xl ml-2 font-black">Book Explorer</h1>
         </div>
     </div>
 
@@ -29,7 +29,7 @@
             </div>
             <div class="mb-6 p-2">
                 <label for="listEl"
-                    class="block ml-2 mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Bestseller
+                    class="block ml-2 mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">New York Times Bestseller
                     List:</label>
                 <select id="listEl"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"></select>
