Bug fixes I introduced

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href=".assets/css/home_style.css">
+    <link rel="stylesheet" href="./assets/css/home_style.css">
     <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
     <title>Team Five Homepage</title>
 </head>
@@ -31,7 +31,7 @@
 
 
                     <li>
-                        <button class="button" role="button"><input type=button onClick="parent.open('')"value='BOOKS'></input></button>
+                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'"value='BOOKS'></input></button>
                     </li>
 
 
