removed dark mode

--- a/book.html
+++ b/book.html
@@ -12,14 +12,14 @@
     <title>Book Details</title>
 </head>
 
-<body class="bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200">
+<body class="bg-white text-slate-800">
 
     <div id="main" class="container mx-auto w-96">
         <h1 id="title" class="text-center text-2xl">Loading...</h1>
         <div id="subtitle" class="text-center text-lg"></div>
         <div class="container mx-auto">
-            <div id="pages" class="float-left text-sm text-slate-700 dark:text-slate-400"></div>
-            <div id="author" class="float-right text-sm text-slate-700 dark:text-slate-400"></div>
+            <div id="pages" class="float-left text-sm text-slate-700"></div>
+            <div id="author" class="float-right text-sm text-slate-700"></div>
         </div>
         <div id="description" class="text-basis clear-both"></div>
         <div id="buyLinks" class="float-left mt-3">
