--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@
     <title>Book Reviews</title>
 </head>
 
-<body class="bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200">
+<body class="bg-white text-slate-800">
 
     <div class="flex flex-col">
         <div class="basis-full head">
@@ -20,23 +20,23 @@
     </div>
 
     <div class="grid lg:grid-cols-6 md:grid-cols-4 sm:grid-cols-1 ml-2">
-        <form class="bg-gray-600 rounded-lg">
+        <form class="bg-gray-400 rounded-lg">
             <div class="mb-6 p-2">
                 <label for="date"
-                    class="block ml-2 mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Date:</label>
+                    class="block ml-2 mb-2 text-sm font-medium text-gray-900">Date:</label>
                 <input type="date" id="date"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
             </div>
             <div class="mb-6 p-2">
                 <label for="listEl"
-                    class="block ml-2 mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">New York Times Bestseller
+                    class="block ml-2 mb-2 text-sm font-medium text-gray-900">New York Times Bestseller
                     List:</label>
                 <select id="listEl"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"></select>
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"></select>
             </div>
             <div class="mb-6 ml-4 p-2">
                 <button type="submit" id="searchButton"
-                    class="m-2 float-right text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+                    class="m-2 float-right text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Submit</button>
             </div>
         </form>
 
