Fixed authors spacing

--- a/book.html
+++ b/book.html
@@ -17,9 +17,9 @@
     <div id="main" class="container mx-auto w-96">
         <h1 id="title" class="text-center text-2xl">Loading...</h1>
         <div id="subtitle" class="text-center text-lg"></div>
-        <div class="container mx-auto">
+        <div class="container mx-auto grid grid-cols-3">
             <div id="pages" class="float-left text-sm text-slate-700"></div>
-            <div id="author" class="float-right text-sm text-slate-700"></div>
+            <div id="author" class="float-right text-sm text-slate-700 grid grid-cols-2 col-span-2 mx-auto"></div>
         </div>
         <div id="description" class="text-basis clear-both"></div>
         <div id="buyLinks" class="float-left mt-3">
