--- a/book.html
+++ b/book.html
@@ -22,6 +22,7 @@
             <div id="author" class="float-right text-sm text-slate-700 grid grid-cols-2 col-span-2 mx-auto"></div>
         </div>
         <div id="description" class="text-basis clear-both"></div>
+        <div id="reviews" class="text-basis clear-both"></div>
         <div id="buyLinks" class="float-left mt-3">
             
         </div>
