Some minor changes to modal and api call

--- a/search.html
+++ b/search.html
@@ -48,7 +48,7 @@
 
     <div id="modal" class="fixed hidden inset-0 bg-slate-300 bg-opacity=50 overflow-y-auto h-full w-full">
         <div class="relative top-40 mx-auto my-auto border w-96 bg-white">
-            <div id="modal-title">Error</div>
+            <div id="modal-title" class="bg-red-400">Error</div>
             <div id="modal-message"></div>
             <div class="items-center px-4 py-4">
                 <button id="modal-dismiss"
