--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./assets/css/home_style.css">
+    <link rel="stylesheet" href="./home_style.css">
     <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
     <title>Team Five Homepage</title>
 </head>
@@ -60,7 +60,7 @@
     <div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap;">
 
         <img
-        id="bookPic" src="./assets/images/imgbin_book-stock-photography-png.png"
+        id="bookPic" src="./images/0A49A59E-B3F5-426A-9363-44E3444E99C4.png"
             alt="an open vinatge book diplayed with pages fanned out"> 
         </img>
 
