--- a/homepage/index.html
+++ b/homepage/index.html
@@ -48,11 +48,9 @@
 
 
     <!-- Jumbotron Markup -->
-    <section class="hero">
+    <section class="hero" class="flex justify-center">
 
-        <h1>Team Five's Book Explorer</h1>
-
-        <div class="flex justify-center" ></div>
+        <h1 class="flex justify-center">Team Five's Book Explorer</h1>
        
     </section>
 
