--- a/contacts.html
+++ b/contacts.html
@@ -17,12 +17,45 @@
 		<nav>
 			<ul>
 				<div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
+					<!--create onclick with JS if you want @Muhammad-->
 					<button class="button" role="button"><input type=button onClick="parent.open('')"value='HOME'></input></button>
 					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'"value='BOOKS'></input></button>
 					<button class="button" role="button"><input type=button onClick="parent.open('')"value='TEAM'></input></button>
 				</div>
 			</ul>
 		</nav>
+
+		<div class="hero" class="flex justify-center">
+			<h1 class="flex justify-center">Contact Us</h1>
+		</div>
 	</header>
+
+	<section>
+		<!--container for each of us-->
+		<div id="container">
+			<!--GitHub icon that links to our webpage-->
+			<a href="link here"><img src="image here" alt="Image of Chris's GitHub page" /></a>
+			<a id="portfolio" class="" href="link here"></a>
+			<a id="contact-info" class="" href="link here"></a>
+		</div>
+
+		<div id="container">
+			<a href="link here"><img src="image here" alt="Image of Muhammad's GitHub page" /></a>
+			<a id="portfolio" class="" href="link here"></a>
+			<a id="contact-info" class="" href="link here"></a>
+		</div>
+
+		<div id="container">
+			<a href="link here"><img src="image here" alt="Image of Damaris's GitHub page" /></a>
+			<a id="portfolio" class="" href="link here"></a>
+			<a id="contact-info" class="" href="link here"></a>
+		</div>
+
+		<div id="container">
+			<a href="link here"><img src="image here" alt="Image of Andrew's GitHub page" /></a>
+			<a id="portfolio" class="" href="link here"></a>
+			<a id="contact-info" class="" href="link here"></a>
+		</div>
+	</section>
 </body>
 </html>
