--- a/contacts.html
+++ b/contacts.html
@@ -18,9 +18,9 @@
 			<ul>
 				<div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
 					<!--create onclick with JS if you want @Muhammad-->
-					<button class="button" role="button"><input type=button onClick="parent.open('')"value='HOME'></input></button>
-					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'"value='BOOKS'></input></button>
-					<button class="button" role="button"><input type=button onClick="parent.open('')"value='TEAM'></input></button>
+					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'index.html'" value='HOME'></input></button>
+					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'" value='BOOKS'></input></button>
+					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'contacts.html'" value='TEAM'></input></button>
 				</div>
 			</ul>
 		</nav>
