--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./home_style.css">
+    <link rel="stylesheet" href="./assets/style/home_style.css">
     <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
     <title>Team Five Homepage</title>
 </head>
@@ -26,17 +26,17 @@
                  <div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
 
                     <li>
-                        <button class="button" role="button"><input type=button onClick="parent.open('')"value='HOME'></input></button>
+                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'index.html'" value='HOME'></input></button>
                     </li>
 
 
                     <li>
-                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'"value='BOOKS'></input></button>
+                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'" value='BOOKS'></input></button>
                     </li>
 
 
                     <li>
-                        <button class="button" role="button"><input type=button onClick="parent.open('')"value='TEAM'></input></button>
+                        <button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'contacts.html'" value='TEAM'></input></button>
                     </li>
 
                </div>
@@ -58,7 +58,7 @@
     <div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap;">
 
         <img
-        id="bookPic" src="./images/0A49A59E-B3F5-426A-9363-44E3444E99C4.png"
+        id="bookPic" src="./assets/images/0A49A59E-B3F5-426A-9363-44E3444E99C4.png"
             alt="an open vinatge book diplayed with pages fanned out"> 
         </img>
 
