Moved styles in style.css into tailwind css

--- a/book.html
+++ b/book.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css">
     <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
-    <title>Book Details</title>
+    <meta name="description" content="Book Explorer: Week 7-8 Coding Challenge, Columbia Engineering Coding Bootcamp">
+    <title>Book Explorer: Details</title>
 </head>
 
 <body class="bg-white text-slate-800">
