--- a/contacts.html
+++ b/contacts.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="./assets/css/contacts.css" />
 	<meta
 		name="description"
-		content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp"/>
-	<title>Contacts</title>
+		content="Book Explorer: Week 7-8 Coding Challenge, Columbia Engineering Coding Bootcamp"/>
+	<title>Book Explorer: Contacts</title>
 </head>
 
 <body>
