--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./assets/style/home_style.css">
-    <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
-    <title>Team Five Homepage</title>
+    <meta name="description" content="Book Explorer: Week 7-8 Coding Challenge, Columbia Engineering Coding Bootcamp">
+    <title>Book Explorer: Homepage</title>
 </head>
 
 <!-- Entire Webpage Content -->
