--- a/book.html
+++ b/book.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-white text-slate-800">
-
+<div id="mainWrapper" class="grid lg:grid-cols-2 sm:grid-cols-1">
     <div id="main" class="container mx-auto w-96">
         <h1 id="title" class="text-center text-2xl">Loading...</h1>
         <div id="subtitle" class="text-center text-lg"></div>
@@ -27,6 +27,10 @@
         </div>
         <div id="borrowLinks" class="float-right mt-3">
             <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4">New York Public Library</a>
+        </div>
+    </div>
+        <div id="viewerCanvas" class="clear-both w-full h-auto">
+
         </div>
     </div>
 
