--- a/book.html
+++ b/book.html
@@ -29,7 +29,7 @@
             <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4">New York Public Library</a>
         </div>
     </div>
-        <div id="viewerCanvas" class="clear-both w-full h-auto">
+        <div id="viewerCanvas" class="clear-both w-full lg:h-screen sm:h-full">
 
         </div>
     </div>
