--- a/search.html
+++ b/search.html
@@ -38,7 +38,7 @@
         </form>
 
         <div class="grid lg:col-span-5 md:col-span-3 sm:col-span-1">
-            <span id="title" class="ml-4 text-xl"></span>
+            <span id="title" class="ml-4 leading-none text-xl"></span>
             <div id="books" class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 h-48">
 
             </div>
