--- a/contacts.html
+++ b/contacts.html
@@ -31,30 +31,32 @@
 	</header>
 
 	<section>
+		<div>
 		<!--container for each of us-->
-		<div id="container">
-			<!--GitHub icon that links to our webpage-->
-			<a href="link here"><img src="image here" alt="Image of Chris's GitHub page" /></a>
-			<a id="portfolio" class="" href="link here"></a>
-			<a id="contact-info" class="" href="link here"></a>
-		</div>
+			<div id="card">
+				<!--GitHub icon that links to our webpage-->
+				<a href="https://github.com/chrispobrien/"><img src="./assets/images/github-icon.svg" alt="Image of Chris's GitHub page" /></a>
+				<a id="portfolio" class="" href="https://chrispobrien.github.io/02-Advanced-CSS-Portfolio/">Portfolio</a>
+				<a id="contact-info" class="" href="link here"></a>
+			</div>
 
-		<div id="container">
-			<a href="link here"><img src="image here" alt="Image of Muhammad's GitHub page" /></a>
-			<a id="portfolio" class="" href="link here"></a>
-			<a id="contact-info" class="" href="link here"></a>
-		</div>
+			<div id="card">
+				<a href="https://github.com/Coding291"><img src="./assets/images/github-icon.svg" alt="Image of Muhammad's GitHub page" /></a>
+				<a id="portfolio" class="" href="link here">Portfolio</a>
+				<a id="contact-info" class="" href="link here"></a>
+			</div>
 
-		<div id="container">
-			<a href="link here"><img src="image here" alt="Image of Damaris's GitHub page" /></a>
-			<a id="portfolio" class="" href="link here"></a>
-			<a id="contact-info" class="" href="link here"></a>
-		</div>
+			<div id="card">
+				<a href="https://github.com/DamarisCanales"><img src="./assets/images/github-icon.svg" alt="Image of Damaris's GitHub page" /></a>
+				<a id="portfolio" class="" href="https://damariscanales.github.io/week2-challenge/">Portfolio</a>
+				<a id="contact-info" class="" href="link here"></a>
+			</div>
 
-		<div id="container">
-			<a href="link here"><img src="image here" alt="Image of Andrew's GitHub page" /></a>
-			<a id="portfolio" class="" href="link here"></a>
-			<a id="contact-info" class="" href="link here"></a>
+			<div id="card">
+				<a href="https://github.com/Andrewplee"><img src="./assets/images/github-icon.svg" alt="Image of Andrew's GitHub page" /></a>
+				<a id="portfolio" class="" href="https://andrewplee.github.io/Week-2-homework/">Portfolio</a>
+				<a id="contact-info" class="" href="link here"></a>
+			</div>
 		</div>
 	</section>
 </body>
