--- a/contacts.html
+++ b/contacts.html
@@ -26,36 +26,40 @@
 		</nav>
 
 		<div class="hero" class="flex justify-center">
-			<h1 class="flex justify-center">Contact Us</h1>
+			<h1 class="flex justify-center text-3xl mb-8">Contact Us</h1>
 		</div>
 	</header>
 
 	<section>
-		<div>
+		<div class="container mx-auto columns-2 space-x-8 space-y-4">
 		<!--container for each of us-->
-			<div id="card">
-				<!--GitHub icon that links to our webpage-->
-				<a href="https://github.com/chrispobrien/"><img src="./assets/images/github-icon.svg" alt="Image of Chris's GitHub page" /></a>
-				<a id="portfolio" class="" href="https://chrispobrien.github.io/02-Advanced-CSS-Portfolio/">Portfolio</a>
-				<a id="contact-info" class="" href="link here"></a>
+			<div class="space-y-4">
+				<div id="card" class="box-border ml-32px h-20 w-64 border-4 border-indigo-500/50 hover:border-indigo-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
+					<!--GitHub icon that links to our webpage-->
+					<a href="https://github.com/chrispobrien/" class="mb-1 ml-1 mt-1 justify"><img src="./assets/images/github-icon.svg" alt="Image of Chris's GitHub page" /></a>
+					<a id="portfolio" class="" href="https://chrispobrien.github.io/02-Advanced-CSS-Portfolio/">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:chris.obrien57@gmail.com">Click for email</a>
+				</div>
+
+				<div id="card" class="box-border h-20 w-64 border-4 border-blue-500/50 hover:border-blue-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
+					<a href="https://github.com/Coding291" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Muhammad's GitHub page" /></a>
+					<a id="portfolio" class="" href="link here">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Click for email</a>
+				</div>
 			</div>
 
-			<div id="card">
-				<a href="https://github.com/Coding291"><img src="./assets/images/github-icon.svg" alt="Image of Muhammad's GitHub page" /></a>
-				<a id="portfolio" class="" href="link here">Portfolio</a>
-				<a id="contact-info" class="" href="link here"></a>
-			</div>
+			<div class="space-y-4 object-center">
+				<div id="card" class="box-border h-20 w-64 border-4 border-rose-500/50 hover:border-rose-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
+					<a href="https://github.com/DamarisCanales" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Damaris's GitHub page" /></a>
+					<a id="portfolio" class="" href="https://damariscanales.github.io/week2-challenge/">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Click for email</a>
+				</div>
 
-			<div id="card">
-				<a href="https://github.com/DamarisCanales"><img src="./assets/images/github-icon.svg" alt="Image of Damaris's GitHub page" /></a>
-				<a id="portfolio" class="" href="https://damariscanales.github.io/week2-challenge/">Portfolio</a>
-				<a id="contact-info" class="" href="link here"></a>
-			</div>
-
-			<div id="card">
-				<a href="https://github.com/Andrewplee"><img src="./assets/images/github-icon.svg" alt="Image of Andrew's GitHub page" /></a>
-				<a id="portfolio" class="" href="https://andrewplee.github.io/Week-2-homework/">Portfolio</a>
-				<a id="contact-info" class="" href="link here"></a>
+				<div id="card" class="box-border h-20 w-64 border-4 border-yellow-500/50 hover:border-yellow-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
+					<a href="https://github.com/Andrewplee" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Andrew's GitHub page" /></a>
+					<a id="portfolio" class="" href="https://andrewplee.github.io/Week-2-homework/">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:alee68@fordam.edu">Click for email</a>
+				</div>
 			</div>
 		</div>
 	</section>
