--- a/contacts.html
+++ b/contacts.html
@@ -31,7 +31,7 @@
 	</header>
 
 	<section>
-		<div class="container mx-auto columns-2 space-x-8 space-y-4">
+		<div class="container mx-auto columns-1 md:columns-2 flex justify-center items-center justify-around">
 		<!--container for each of us-->
 			<div class="space-y-4">
 				<div id="card" class="box-border ml-32px h-20 w-64 border-4 border-indigo-500/50 hover:border-indigo-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
