changed page title and changed contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,6 @@
 		<nav>
 			<ul>
 				<div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
-					<!--create onclick with JS if you want @Muhammad-->
 					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'index.html'" value='HOME'></input></button>
 					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'" value='BOOKS'></input></button>
 					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'contacts.html'" value='TEAM'></input></button>
@@ -38,13 +37,13 @@
 					<!--GitHub icon that links to our webpage-->
 					<a href="https://github.com/chrispobrien/" class="mb-1 ml-1 mt-1 justify"><img src="./assets/images/github-icon.svg" alt="Image of Chris's GitHub page" /></a>
 					<a id="portfolio" class="" href="https://chrispobrien.github.io/02-Advanced-CSS-Portfolio/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:chris.obrien57@gmail.com">Click for email</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:chris.obrien57@gmail.com">Chris O'brien</a>
 				</div>
 
 				<div id="card" class="box-border h-20 w-64 border-4 border-blue-500/50 hover:border-blue-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
 					<a href="https://github.com/Coding291" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Muhammad's GitHub page" /></a>
 					<a id="portfolio" class="" href="link here">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Click for email</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Muhammad Azam</a>
 				</div>
 			</div>
 
@@ -52,13 +51,13 @@
 				<div id="card" class="box-border h-20 w-64 border-4 border-rose-500/50 hover:border-rose-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
 					<a href="https://github.com/DamarisCanales" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Damaris's GitHub page" /></a>
 					<a id="portfolio" class="" href="https://damariscanales.github.io/week2-challenge/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Click for email</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Damaris Canales</a>
 				</div>
 
 				<div id="card" class="box-border h-20 w-64 border-4 border-yellow-500/50 hover:border-yellow-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
 					<a href="https://github.com/Andrewplee" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Andrew's GitHub page" /></a>
 					<a id="portfolio" class="" href="https://andrewplee.github.io/Week-2-homework/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:alee68@fordam.edu">Click for email</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:alee68@fordam.edu">Andrew Lee</a>
 				</div>
 			</div>
 		</div>
