--- a/search.html
+++ b/search.html
@@ -16,7 +16,6 @@
         <nav>
 			<ul>
 				<div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap; padding-top: 30px;">
-					<!--create onclick with JS if you want @Muhammad-->
 					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'index.html'" value='HOME'></input></button>
 					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'search.html'" value='BOOKS'></input></button>
 					<button class="button" role="button"><input type=button class='cursor-pointer' onClick="window.location = 'contacts.html'" value='TEAM'></input></button>
@@ -25,11 +24,11 @@
 		</nav>
     </header>
 
-    <div class="flex flex-col">
+    <!-- <div class="flex flex-col">
         <div class="basis-full head">
-            <h1 class="text-2xl ml-2 font-black">Book Explorer</h1>
+
         </div>
-    </div>
+    </div> -->
 
     <div class="grid lg:grid-cols-6 md:grid-cols-4 sm:grid-cols-1 ml-2">
         <form class="bg-gray-400 rounded-lg">
@@ -51,7 +50,7 @@
         </form>
 
         <div class="grid lg:col-span-5 md:col-span-3 sm:col-span-1">
-            <span id="title" class="ml-4 leading-none text-xl"></span>
+            <span id="title" class="ml-4 leading-none text-3xl underline decoration-double text-center"></span>
             <div id="books" class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 h-48">
 
             </div>
