add email and portfolio link

--- a/contacts.html
+++ b/contacts.html
@@ -42,8 +42,8 @@
 
 				<div id="card" class="box-border h-20 w-64 border-4 border-blue-500/50 hover:border-blue-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
 					<a href="https://github.com/Coding291" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Muhammad's GitHub page" /></a>
-					<a id="portfolio" class="" href="link here">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Muhammad Azam</a>
+					<a id="portfolio" class="" href="https://coding291.github.io/Week2--Homework/">Portfolio</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:azam.muhammad2002@gmail.com">Muhammad Azam</a>
 				</div>
 			</div>
 
@@ -51,7 +51,7 @@
 				<div id="card" class="box-border h-20 w-64 border-4 border-rose-500/50 hover:border-rose-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
 					<a href="https://github.com/DamarisCanales" class="mb-1 ml-1 mt-1"><img src="./assets/images/github-icon.svg" alt="Image of Damaris's GitHub page" /></a>
 					<a id="portfolio" class="" href="https://damariscanales.github.io/week2-challenge/">Portfolio</a>
-					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="link here">Damaris Canales</a>
+					<a id="contact-info" class="text-slate-600/50 hover:text-black" href="mailto:damariscanales@gmail.com">Damaris Canales</a>
 				</div>
 
 				<div id="card" class="box-border h-20 w-64 border-4 border-yellow-500/50 hover:border-yellow-500/100 flex flex-col flex-wrap space-x-1 place-content-center rounded">
