--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./home_style.css">
+    <link rel="stylesheet" href="./assets/home_style.css">
     <meta name="description" content="Book Review: Week 6 Coding Challenge, Columbia Engineering Coding Bootcamp">
     <title>Team Five Homepage</title>
 </head>
@@ -50,7 +50,7 @@
     <!-- Jumbotron Markup -->
     <section class="hero" class="flex justify-center">
 
-        <h1 class="flex justify-center">Team Five's Book Explorer</h1>
+        <h1 class="flex justify-center">Binary Beasts' Book Exploere</h1>
        
     </section>
 
@@ -58,7 +58,7 @@
     <div class="flex justify-evenly" style="flex-direction: row; flex-wrap: wrap;">
 
         <img
-        id="bookPic" src="./images/0A49A59E-B3F5-426A-9363-44E3444E99C4.png"
+        id="bookPic" src="./assets/0A49A59E-B3F5-426A-9363-44E3444E99C4.png"
             alt="an open vinatge book diplayed with pages fanned out"> 
         </img>
 
@@ -71,7 +71,7 @@
     >
         <p>
             <br>This site is a one-stop ecommerce search engine that searches over 150 million books for sale. Books that are new, used, and possible to borrow from a library near you.</br>
-            <br>We save you time and money by searching New York Times Bestsellers Lists and letting you know which booksellers are offering the best prices and selection.</br>
+            <br>We save you time and money by searching multiple New York Times Bestsellers Lists; and letting you know which booksellers are offering the best prices and selection.</br>
             <br>We are heavy readers, and buy several dozen books every year using our own search engine. We take pleasure in advocating for a strong, diverse, bookselling industry.</br>
             <br>Dive-in and enjoy!</br>
     </p>
