--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Jumbotron Markup -->
     <section class="hero" class="flex justify-center">
 
-        <h1 class="flex justify-center">Team Five's Book Explorer</h1>
+        <h1 class="flex justify-center">Book Explorer</h1>
        
     </section>
 
